--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Informações do Site
-title: LimasDev61 | Estudos de Engenharia de Software
-description: Repositório de códigos e artigos sobre Python, POO e desenvolvimento.
+title: LimasDev61 | Roadmap Python
+description: Repositório de códigos para estudantes de Python
 email: seu-email@exemplo.com # Opcional
 
 # Configurações de Aparência
