sub-titulo alterado para algo mais condizente ao site

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Informações do Site
 title: LimasDev61 | Roadmap Python
-description: Repositório de códigos para estudantes de Python
+description: Um roadmap de Python gratuito, feito de um estudante para outros estudantes
 email: seu-email@exemplo.com # Opcional
 
 # Configurações de Aparência
