Alterações foram feitas para testar a mudança da página

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ theme: jekyll-theme-cayman
 markdown: kramdown
 highlighter: rouge
 
+sass:
+  sass_dir: _sass
+  
 # Caminhos
 baseurl: ""
 url: "https://LimasDev61.github.io"
